[package]
name = "themelio-structs"
version = "0.3.0-beta.7"
authors = ["Themelio Labs"]
edition = "2021"

description = "Core data structures for Themelio"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/themelio-structs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
tmelcrypt = "0.2.4"
stdcode = "0.1.14"
num_enum = "0.5.7"
serde_repr = "0.1.9"
thiserror = "1.0.37"
hex = "0.4.3"
tap = "1.0.1"
num = "0.4.0"
derivative = "2.2.0"
parse-display = "0.5.5"
serde_with = "1.14.0"
bytes = "1.2.1"


[dependencies.serde]
version = "1.0.147"
features = ["derive"]
